finalized API
