# config/passport.js
@@ -1,44 +1,47 @@
-require('dotenv').config()
-const GoogleStrategy = require('passport-google-oauth20').Strategy
-const mongoose = require('mongoose')
+const dotenv = require('dotenv');
+dotenv.config();
+const passport = require('passport')
+const GoogleStrategy = require('passport-google-oauth20').Strategy;
+const User = require('../models/User')
 
-module.exports = function(passport) {
-    passport.use(new GoogleStrategy(
-    {
-        clientID: process.env.GOOGLE_CLIENT_ID,
-        clientSecret: process.env.GOOGLE_CLIENT_SECRET,
-        callbackURL: "/auth/google/callback"
-    },
-    async (accessToken, refreshToken, profile, done) => {
-        console.log(profile)
-        //WHERE IT WILL BE SAVING TO DATABASE
-        /*
-        const newUser = {
-            googleId: profile.id,
-            displayName: profile.displayName,
-            firstName: profile.name.givenName,
-            lastName: profile.name.familyName,
-            image: profile.photos[0].value
-        }
+passport.use(User.createStrategy());
+
+passport.serializeUser(function(user, done) {
+    done(null, user.id);
+});
+
+passport.deserializeUser(async function(id, done) {
+    let user = await User.findById(id)
+    done(null, user); 
+});
+
+passport.use(new GoogleStrategy({
+    clientID: process.env.CLIENT_ID,
+    clientSecret: process.env.CLIENT_SECRET,
+    // callbackURL: "http://localhost:3000/auth/google/secrets",
+    callbackURL: "http://localhost:8000/users/auth/google/callback",
+    userProfileURL: "https://www.googleapis.com/oauth2/v3/userinfo"
+  },
+
+    async function (accessToken, refreshToken, profile, done) {
         
-        try {
-            let user = await User.findOne({googleId: profile.id})
-            if (user) {
-                done(null, user)
-            } else {
-                user = await User.create(newUser)
-                done(null, user)
-            }
-        } catch (err) {
-            console.error(err)
-        }
-        */
-    }))
-    passport.serializeUser((user, done) => {
-        done(null, user.id)
-    })
 
-    passport.deserializeUser(function (id, done) {
-        User.findById(id, (err, user) => done(err, user))
-    })
-}
+        try {
+
+            let user = await User.findOne({ googleId: profile.id });
+            if (!user) {
+
+                const newUser = new User({
+                    username: profile.displayName,
+                    googleId: profile.id
+                });
+                user = await newUser.save();
+            }
+            return done(null, user);
+            } catch (err) {
+                return done(err);
+            }
+    }
+
+
+));
