# models/User.js
@@ -1,26 +1,23 @@
-const mongoose = require('mongoose');
+const mongoose = require("mongoose");
+const passportLocalMongoose = require("passport-local-mongoose");
 
 
 const UserSchema = new mongoose.Schema({
-    googleId: {
-        type: String,
-        required: true
-    },
-    displayName: {
-        type: String,
-        required: true
-    },
-    firstName: {
-        type: String,
-        required: true
-    },
-    lastName: {
-        type: String,
-        required: true
-    },
-    image: {
-        type: String,
-    },
+    username: {
+        type: String
+      },
+  
+      email: {
+        type: String
+      },
+  
+      password: {
+          type: String
+      },
+  
+      googleId: {
+          type: String
+      },
     createdAt: {
         type: Date,
         default: Date.now
@@ -28,5 +25,6 @@ const UserSchema = new mongoose.Schema({
 
 })
 
-module.exports = UserSchema
-//module.exports = mongoose.model('User', UserSchema)
+UserSchema.plugin(passportLocalMongoose);
+
+module.exports = mongoose.model("Users", UserSchema);
