# routes/games.js
@@ -2,6 +2,14 @@ const express = require('express');
 const router = express.Router();
 const { GamesController } = require('../controllers/games');
 
+router.get("/games-protected", (req, res, next) => {
+    if (req.isAuthenticated()){
+      res.send("This request is authenticated");
+    } else {
+      res.status(400).json("Sorry you must be logged in! No authorization");
+    }
+});
+
 router.get('/', (req, res, next) => {
     let controller = new GamesController('games')
     controller.getAllGames(req, res, next)
