# routes/tv_shows.js
@@ -2,6 +2,14 @@ const express = require('express');
 const router = express.Router();
 const { TvShowController } = require('../controllers/tv_shows');
 
+router.get("/tvshows-protected", (req, res, next) => {
+    if (req.isAuthenticated()){
+      res.send("This request is authenticated");
+    } else {
+      res.status(400).json("Sorry you must be logged in! No authorization");
+    }
+});
+
 router.get('/', (req, res, next) => {
     let controller = new TvShowController('shows')
     controller.getAllShows(req, res, next)
